--- a/app/src/main/res/layout/homepage_genitore.xml
+++ b/app/src/main/res/layout/homepage_genitore.xml
@@ -18,7 +18,18 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/pesca"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <ImageButton
+                android:id="@+id/btnSwitchToChildArea"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/baseline_child_care_24"
+            android:contentDescription="@string/switch_to_child_area_button"
+            android:layout_gravity="end"
+            android:padding="8dp" />
+
+        </androidx.appcompat.widget.Toolbar>
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_host_genitore"
