--- a/app/src/main/res/layout/posizioneclassifica_paziente.xml
+++ b/app/src/main/res/layout/posizioneclassifica_paziente.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <TextView
@@ -16,7 +16,6 @@
         android:id="@+id/textViewClassifica"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="155dp"
         android:text="TextView" />
 
 
