--- a/app/src/main/res/layout/progressi_paziente.xml
+++ b/app/src/main/res/layout/progressi_paziente.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Giorni Settimanali"/>
+        android:text="@string/giorni"/>
 
     <RatingBar
         android:id="@+id/ratingBarGiornigiochi"
