--- a/app/src/main/res/layout/progressi_paziente_errori.xml
+++ b/app/src/main/res/layout/progressi_paziente_errori.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Percentuale errori per attività "/>
+        android:text="@string/progressi_errori"/>
 
     <TextView
         android:id="@+id/textViewpercentualeerrori"
