--- a/app/src/main/res/layout/activity_exercise_list.xml
+++ b/app/src/main/res/layout/activity_exercise_list.xml
@@ -11,7 +11,7 @@
         android:id="@+id/MyToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#1C3144"
+        android:background="#FFCC99"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="">
@@ -27,7 +27,7 @@
                 android:layout_height="49dp"
                 android:layout_gravity="start"
                 android:contentDescription="Icona in alto a sinistra"
-                android:src="@mipmap/ic_turn_left" />
+                android:src="@mipmap/ic_torna_indietro_premi_round" />
 
             <TextView
                 android:id="@+id/toolbarTitle"
