--- a/app/src/main/res/navigation/nav_graph_genitore.xml
+++ b/app/src/main/res/navigation/nav_graph_genitore.xml
@@ -9,7 +9,7 @@
     <fragment
         android:id="@+id/homePageGenitoreFragment"
         android:name="it.uniba.dib.sms2324_16.HomePageGenitoreFragment"
-        android:label="Home Page Genitore"
+        android:label="@string/home_page_genitore"
         tools:layout="@layout/fragment_home_page_genitore" >
         <action
             android:id="@+id/action_homePageGenitoreFragment_to_appuntamentiGenitoreFragment"
