--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -120,6 +120,17 @@
                 android:visibility="gone"/>
 
             <Button
+                android:id="@+id/bambini"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="370dp"
+                android:backgroundTint="@color/celeste"
+                android:text="Inserimento bambini"
+                android:textColor="@color/white"
+                android:visibility="invisible"/>
+
+            <Button
                 android:id="@+id/registrazione"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
