Ho impostato la corrispondenza tra genitore ed un solo bambino

--- a/app/src/main/res/layout/lista_bambini.xml
+++ b/app/src/main/res/layout/lista_bambini.xml
@@ -38,8 +38,8 @@
 
         </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/checkbox"
+        <RadioButton
+            android:id="@+id/radioButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.2"/>
