--- a/app/src/main/res/layout/lista_esercizi.xml
+++ b/app/src/main/res/layout/lista_esercizi.xml
@@ -27,7 +27,7 @@
                     android:id="@+id/childNameTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bambino: " />
+                    android:text="Nome: " />
 
                 <TextView
                     android:id="@+id/exerciseTypeTextView"
