--- a/app/src/main/res/layout/activity_scenario_mondo_incantato.xml
+++ b/app/src/main/res/layout/activity_scenario_mondo_incantato.xml
@@ -36,7 +36,7 @@
         android:id="@+id/tvScenarioTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Scenario Mondo Incantato"
+        android:text="@string/scenario_mondo_incantato"
         android:textSize="24sp"
         android:textStyle="bold" />
 
