--- a/app/src/main/res/layout/profilo_utente.xml
+++ b/app/src/main/res/layout/profilo_utente.xml
@@ -75,7 +75,7 @@
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Correzione esercizi"
+            android:text="@string/correzione_esercizi"
             app:layout_constraintStart_toEndOf="@id/assegnaButton"/>
 
 
